# slackapp

./: Dockerfile  README.md  app.py  requirements.txt  setup.cfg
src/: app.py
