[metadata]
name = slack-afk
version = 0.0.1
author = iob
author_email = jbonatakis@gmail.com
description = Slack Command bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/b10n1k/slackapp
project_urls =
    Bug Tracker = https://github.com/b10n1k/slackapp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
